fixed overflow

--- a/src/pages/NewsPage/NewsPage.scss
+++ b/src/pages/NewsPage/NewsPage.scss
@@ -3,7 +3,7 @@
   overflow-y: hidden;
   border-bottom: 1px solid var(--clr-fontAccent);
   /* padding: 0 1em; */
-  width: 90%;
+  // width: 90%;
   margin: 0 auto;
   background-color: inherit;
 }
@@ -18,6 +18,9 @@
 
 .news-latest {
   padding: 0 .4em;
+    max-width: 1200px;
+
+    margin: 0 auto;
 }
 
 .news-heading {
@@ -31,6 +34,8 @@
   height: 1000px;
   /* background-color: #555; */
   overflow-y: scroll;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .news-card {
@@ -135,6 +140,7 @@
   background-color: #0b0b0b;
   /* height: 400px; */
   max-width: 1200px;
+  margin: 0  auto;
 }
 
 .video-frame {
