--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -59,9 +59,9 @@ body {
   font-size: 16px;
   height: 100vh;
   min-height: 1000px;
-  max-width: 1400px;
+  width: 100vw;
   margin: 0 auto;
-  overflow-x: hidden;
+  overflow: auto;
 }
 
 .right {
@@ -106,4 +106,33 @@ select {
   padding: 0.6em 1.2em;
   border-radius: 10px;
   border: none;
+}
+
+
+
+$max-width: 1600px;
+.Navbar {
+    max-width: $max-width;
+
+}
+
+.CryptosPage {
+  max-width: $max-width;
+}
+
+.NewsPage {
+  max-width: $max-width;
+  margin: 0 auto;
+
+}
+
+.PortfolioPage {
+  max-width: $max-width;
+
+
+}
+
+.WidgetsPage {
+  max-width: $max-width;
+
 }
