--- a/src/scss/crypto-table.scss
+++ b/src/scss/crypto-table.scss
@@ -10,6 +10,7 @@ $table-row-height: 4.2em;
 
 .crypto-table {
   margin-top: 1.4em;
+  max-height: fit-content;
 }
 
 .portfolio-table {
